<?xml version="1.0"?>
<package format="2">
  <name>descartes_opw_model</name>
  <version>0.1.0</version>
  <description>The descartes_opw_model package</description>

  <maintainer email="Jmeyer1292@gmail.com">Jonathan Meyer</maintainer>
  <maintainer email="Jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>descartes_moveit</build_depend>
  <build_depend>opw_kinematics</build_depend>
  <build_export_depend>descartes_moveit</build_export_depend>
  <build_export_depend>opw_kinematics</build_export_depend>
  <exec_depend>descartes_moveit</exec_depend>
  <exec_depend>opw_kinematics</exec_depend>


  <export>
  </export>
</package>
